[TASK] updated files to be 2018 ready

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">td-iem-411</string>
+    <string name="app_name">Coder Proprement</string>
     <string name="button_label_associate">Associate</string>
     <string name="button_label_detail">Detail</string>
     <string name="button_label_retrieve">Display current</string>
